--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 /book
 /target
 Cargo.lock
+
+#VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
